# belobog-stellar-grid

./: .gitignore  API.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  EXCEL_PREVIEW_PLAN.md  README.md  index.html  justfile  llms.txt
.agent/rules/: project-rules.md
.cursor/rules/: projectrules.mdc
.github/: copilot-instructions.md
.github/workflows/: benchmark.yml  ci.yml
.kiro/steering/: project-rules.md
.trae/rules/: project_rules.md
benches/: export_benchmarks.rs
dev/bench/: data.js
e2e/: README.md  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
e2e/tests/: array-export.spec.ts  basic-export.spec.ts  benchmark.spec.ts  container-export.spec.ts  multi-sheet-export.spec.ts  style-export.spec.ts  tree-export.spec.ts  wasm-init.spec.ts
examples/: README.md  advanced-features.html  array-export.html  basic-export.html  benchmark.html  cdn-export.html  container-export.html  excel-preview.html  index.html  multi-sheet-export.html  progress-export.html  streaming-export.html  style-export.html  tree-export.html  worker-export.html
pkg/: README.md  belobog_stellar_grid.d.ts  belobog_stellar_grid.js  belobog_stellar_grid_bg.wasm  belobog_stellar_grid_bg.wasm.d.ts  package.json
src/: batch_export.rs  batch_export_xlsx.rs  lib.rs  resource.rs  streaming_export.rs  utils.rs  validation.rs
src/core/: data_export.rs  excel_reader.rs  excel_style.rs  export_csv.rs  (+5 more)
tests/: BUILD_REPORT.md  README.md  lib_tests.rs  test_data_export.rs  test_excel_preview.rs  test_resource.rs  test_security.rs  test_streaming_export.rs  test_unified_api.rs
(+1 files in other folders)
