[package]
name = "belobog-stellar-grid"
version = "1.0.7"
authors = ["Kurisu <makise_kurisuu@outlook.jp>"]
edition = "2024"
rust-version = "1.85.0"
description = "一个安全高效的 WebAssembly 库，用于将 HTML 表格数据导出为 CSV 和 XLSX 文件"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kurisu994/belobog-stellar-grid"
keywords = ["wasm", "csv", "xlsx", "export", "table"]
categories = ["wasm", "web-programming", "encoding"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.83", features = [
  "HtmlTableElement",
  "HtmlTableRowElement",
  "HtmlTableCellElement",
  "HtmlTableSectionElement",
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
  "Url",
  "Blob",
  "HtmlCollection",
  "HtmlAnchorElement",
  "BlobPropertyBag",
  "console",
  "CssStyleDeclaration",
] }
js-sys = "0.3.83"
csv = "1.4.0"
rust_xlsxwriter = { version = "0.69.0", features = ["wasm"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.56"
